[project]
name = "PyAutoscoper"
dynamic = ["version"]
description = "A Python client library for the Autoscoper API"
readme = "README.md"
authors = [
    {name = "Anthony J. Lombardi", email = "anthony.lombardi@kitware.com" }
]
license = { text = "Autoscoper License" }
requires-python = ">=3.8"
keywords = []
classifiers = []
dependencies = []


[project.urls]
homepage = "https://autoscoperm.slicer.org/"
repository = "https://github.com/BrownBiomechanics/Autoscoper/tree/main/scripts/python"

[build-system]
requires = ["setuptools>=65", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "black>=22.3.0",
]

[tool.black]
line-length = 120
target_version = ['py38']
include = '\.pyi?$'

[tool.ruff]
select = [
    "ARG",         # flake8-unused-arguments
#    "ANN",         # flake8-annotations
    "B",           # flake8-bugbear
    "C4",          # flake8-comprehensions
    "E", "F", "W", # flake8
    "EXE",         # flake8-executable
    "G",           # flake8-logging-format
    "I",           # isort
    "ICN",         # flake8-import-conventions
    "ISC",         # flake8-implicit-str-concat
    "NPY",         # NumPy specific rules
    "PGH",         # pygrep-hooks
    "PIE",         # flake8-pie
    "PL",          # pylint
    "PT",          # flake8-pytest-style
    "RET",         # flake8-return
    "RUF",         # Ruff-specific
    "S",           # flake8-bandit
    "SIM",         # flake8-simplify
    "UP",          # pyupgrade
    "YTT",         # flake8-2020
]
extend-ignore = [
    "ANN101",  # missing-type-self
    "G004",    # logging-f-string
    "PIE790",  # unnecessary-pass
    "PLR0913", # too many arguments to function call
    "PLR1711", # useless `return` statement at end of function
    "RET504",  # unnecessary assignment before `return` statement
    "S311",    # standard pseudo-random generators are not suitable for cryptographic purposes
]
target-version = "py38"
line-length = 120
flake8-annotations.suppress-dummy-args = true
flake8-annotations.suppress-none-returning = true
isort.known-first-party = [
  "PyAutoscoper",
]

[tool.ruff.per-file-ignores]
"pyautoscoper-examples.py" = [
    "E402",  # Module level import not at top of file
    "S603",  # `subprocess` call: check for execution of untrusted input"
]

[tool.setuptools_scm]
root = "../.."
git_describe_command = [
    'git',
    'describe',
    '--dirty',
    '--tags',
    '--long',
    '--match',
    'python-client-v*'
]
